Remove nsDummyLayoutRequest and use the nsIDocument onload-blocking API instead.  Bug 294114, r=dbaron, sr=jst