content/base/public/nsIDocument.h
@@ -93,8 +93,8 @@ class nsILayoutHistoryState;
 
 // IID for the nsIDocument interface
 #define NS_IDOCUMENT_IID      \
-{ 0xd7c47f55, 0x480b, 0x4a60, \
-  { 0x9a, 0xdf, 0xca, 0x49, 0x87, 0x3c, 0x71, 0xe2 } }
+{ 0xd0128d9f, 0x8d36, 0x4944, \
+  { 0xb2, 0x4b, 0x05, 0xba, 0xc2, 0x73, 0x1c, 0x66 } }
 
 // The base value for the content ID counter.
 // This counter is used by the document to 
@@ -727,8 +727,9 @@ public:
    * should block onload is posted.  onload is guaranteed to not fire until
    * either all calls to BlockOnload() have been matched by calls to
    * UnblockOnload() or the load has been stopped altogether (by the user
-   * pressing the Stop button, say).  onload may fire synchronously from inside
-   * the UnblockOnload() call.
+   * pressing the Stop button, say).  onload will fire asynchronously after all
+   * onload blocks have been removed.  It will NOT fire from inside
+   * UnblockOnload.
    */
   virtual void BlockOnload() = 0;
   virtual void UnblockOnload() = 0;
